# ScholarAgentRoom

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  sessions.db
backend/: agents.py  app.py  db.py  prompts.py  storage.py
frontend/: app.js  index.html
sessions/: 5919e224.json  a51054bb.json
tests/: test_backend.py
