[project]
name = "agentroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pyautogen",
	"fastapi",
	"uvicorn",
	"python-dotenv",
	"aiofiles>=25.1.0",
	"structlog>=25.5.0",
	"sqlalchemy>=2.0.46",
	"aiosqlite>=0.22.1",
	"greenlet>=3.3.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
